<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_developers">Kiva for Maintaining\10Crixec for Icon Design\10CoolApk User @NimaQu for providing server\10QQ User @My for providing free network</string>
    <string name="about_developers_label">Developers &amp; Contributors</string>
    <string name="about_libraries_label">Libraries</string>
    <string name="about_reset_label">Reset App</string>
    <string name="about_reset_label_desc">Clear all files except user home directory</string>
    <string name="about_source_label">Source Code</string>
    <string name="about_version_label">Version</string>
    <string name="accel_fast">Fast</string>
    <string name="accel_fixed_horiz">Fixed to table desk orientation</string>
    <string name="accel_fixed_start">Fixed when application starts</string>
    <string name="accel_floating">Floating</string>
    <string name="accel_medium">Medium</string>
    <string name="accel_question">Accelerometer sensitivity</string>
    <string name="accel_question_center">Accelerometer center position</string>
    <string name="accel_slow">Slow</string>
    <string name="accel_veryfast">Very fast</string>
    <string name="accel_veryslow">Very slow</string>
    <string name="accessing_network">Accessing network, please wait</string>
    <string name="acra_dialod_title">ANDRAX has CRASHED!</string>
    <string name="acra_dialog_comment">We need you to submit this report so we can fix the errors. PLEASE, PROVIDE A DESCRIPTION!</string>
    <string name="acra_dialog_text">ANDRAX has CRASHED Send US a Report!!!</string>
    <string name="action_settings">Settings</string>
    <string name="advanced">Advanced features</string>
    <string name="andrax_version_link">https://andrax.thecrackertechnology.com/version</string>
    <string name="andraxdescmain">ANDRAX Advanced Penetration Testing and Ethical Hacking platform developed by Weidsom Nascimento of The Cracker Technology, ANDRAX is fully portable for any Android smartphone, it is not recommended to use in tablets.</string>
    <string name="app_name">ANDRAX Hacker\'s Platform</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apt_update_ok">Package list successfully updated</string>
    <string name="apt_upgrade_ok">Package successfully upgraded</string>
    <string name="audiobuf_large">Large (older devices, if sound is choppy)</string>
    <string name="audiobuf_medium">Medium</string>
    <string name="audiobuf_question">Size of audio buffer</string>
    <string name="audiobuf_small">Small</string>
    <string name="audiobuf_verysmall">Very small (fast devices, less lag)</string>
    <string name="available_user_scripts">Available User Scripts</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="busyboxnotdesc">ANDRAX could not find the official busybox, click \"OK\" and ANDRAX will perform the installation of ANDRAX BusyBox or click \"FORCE INSTALL\" to force installtion and never ask.\10\10This can be dangerous ANDRAX need your own busybox to work properly!!!</string>
    <string name="busyboxnottitle">Unofficial BusyBox!</string>
    <string name="busyofdesc">You do not have a BusyBox installed or it is not installed in the correct place \"/system/bin\" ANDRAX needs a busybox\10Click \"OK\" and ANDRAX will install it.</string>
    <string name="busyoftitle">BusyBox not installed!</string>
    <string name="calibrate_gyroscope">Calibrate gyroscope</string>
    <string name="calibrate_gyroscope_not_supported">Your device does not have gyroscope</string>
    <string name="calibrate_gyroscope_text">Put your device on a flat surface</string>
    <string name="calibrate_touchscreen">Calibrate touchscreen</string>
    <string name="calibrate_touchscreen_touch">Touch all edges of the screen, press BACK when done</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_download">Cancel data downloading?</string>
    <string name="cancel_download_resume">You can resume it later, the data will not be downloaded twice.</string>
    <string name="cflags">-fPIE -pie -s</string>
    <string name="channel_alpha">A</string>
    <string name="channel_blue">B</string>
    <string name="channel_green">G</string>
    <string name="channel_hue">H</string>
    <string name="channel_lightness">L</string>
    <string name="channel_red">R</string>
    <string name="channel_saturation">S</string>
    <string name="channel_value">V</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="click_with_dpadcenter">Left mouse click with trackball / joystick center</string>
    <string name="command_display_title_cannot_be_null">Display title cannot be null</string>
    <string name="command_shortcut">Command Shortcut</string>
    <string name="command_shortcut_command">Command</string>
    <string name="command_shortcut_display_title">Title</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="customization_settings">Customization</string>
    <string name="customization_settings_desc">Font, ColorScheme</string>
    <string name="dangerous_zone">Dangerous Zone</string>
    <string name="general_settings">General Settings</string>
    <string name="general_settings_desc">Bell, Vibrate, Shell, Initial Command</string>
    <string name="key_ui_eks_enabled">neoterm_ui_eks_enabled</string>
    <string name="key_ui_eks_weight_explicit">neoterm_ui_eks_weight_explicit</string>
    <string name="key_ui_fullscreen">neoterm_ui_fullscreen</string>
    <string name="key_ui_hide_toolbar">neoterm_ui_hide_toolbar</string>
    <string name="key_ui_next_tab_anim">neoterm_ui_next_tab_anim</string>
    <string name="pref_ui_close_tab_anim_next_tab">Next tab animation</string>
    <string name="pref_ui_close_tab_anim_next_tab_desc">Switch to the next tab instead of the previous tab when closing tab</string>
    <string name="pref_ui_eks_enabled">Show extra keys</string>
    <string name="pref_ui_eks_enabled_desc">Some useful keys like arrow, esc, tab, etc.</string>
    <string name="pref_ui_eks_weight_explicit">Use explicit weight for ExtraKeysView</string>
    <string name="pref_ui_eks_weight_explicit_desc">If ExtraKeysView shows incorrectly, please enable this</string>
    <string name="pref_ui_fullscreen">Full Screen</string>
    <string name="pref_ui_hide_toolbar">Hide Toolbar</string>
    <string name="pref_ui_hide_toolbar_desc">Hide toolbar when keyboard is showing</string>
    <string name="setup_backup">Restore from NeoTerm Backup</string>
    <string name="setup_dots">…</string>
    <string name="setup_info">Hello, NeoTerm</string>
    <string name="setup_local">Local Zip File Setup</string>
    <string name="setup_next">Let\'s Go!</string>
    <string name="setup_online">Online Setup</string>
    <string name="setup_setup_method">Select your installation method</string>
    <string name="setup_source_parameter">Source Parameter</string>
    <string name="show_help">Show Help</string>
    <string name="support_donate_description">If you like this app, you can offer developers a cup of coffee</string>
    <string name="support_donate_label">Donate</string>
    <string name="ui_settings">UI Settings</string>
    <string name="ui_settings_desc">FullScreen, Title Bar, Animation</string>
</resources>