<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <Preference android:icon="@drawable/ic_general_white_36dp" android:title="@string/general_settings" android:summary="@string/general_settings_desc">
        <intent android:targetPackage="com.thecrackertechnology.andrax" android:targetClass="com.thecrackertechnology.dragonterminal.ui.settings.GeneralSettingsActivity"/>
    </Preference>
    <Preference android:icon="@drawable/ic_ui_white_36dp" android:title="@string/ui_settings" android:summary="@string/ui_settings_desc">
        <intent android:targetPackage="com.thecrackertechnology.andrax" android:targetClass="com.thecrackertechnology.dragonterminal.ui.settings.UISettingsActivity"/>
    </Preference>
    <Preference android:icon="@drawable/ic_customization_white_36dp" android:title="@string/customization_settings" android:summary="@string/customization_settings_desc">
        <intent android:targetPackage="com.thecrackertechnology.andrax" android:targetClass="com.thecrackertechnology.dragonterminal.ui.customize.CustomizeActivity"/>
    </Preference>
</PreferenceScreen>
