<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="32dp">
    <TextView android:textSize="32sp" android:textColor="@color/colorAccent" android:gravity="center" android:layout_gravity="center" android:id="@+id/setup_title_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:layout_marginBottom="26dp" android:text="@string/setup_info"/>
    <TextView android:id="@+id/select_method_tip_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setup_setup_method" android:layout_below="@+id/setup_title_text"/>
    <Button android:id="@+id/setup_next" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setup_next" android:layout_alignParentBottom="true"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@+id/setup_next" android:layout_below="@+id/select_method_tip_text">
        <RadioGroup android:id="@+id/setup_method_group" android:layout_width="match_parent" android:layout_height="wrap_content" android:checkedButton="@+id/setup_method_online">
            <RadioButton android:id="@+id/setup_method_online" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setup_online"/>
            <RadioButton android:id="@+id/setup_method_local" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setup_local"/>
            <RadioButton android:id="@+id/setup_method_backup" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setup_backup"/>
        </RadioGroup>
        <TextView android:id="@+id/setup_url_tip_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/setup_source_parameter"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/setup_source_parameter_select" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/setup_dots" android:layout_weight="0.2"/>
        </LinearLayout>
        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="8dp">
            <TextView android:id="@+id/setup_log_text" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
