<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar android:theme="@style/ThemeOverlay.AppCompat.Dark" android:id="@+id/about_toolbar" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
    <ScrollView android:padding="8dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:id="@android:id/content" android:layout_width="match_parent" android:layout_height="wrap_content">
            <android.support.v7.widget.CardView android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" app:cardBackgroundColor="@color/list_download_item_color_dark" app:cardUseCompatPadding="true">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp">
                    <LinearLayout android:orientation="horizontal" android:padding="16dp" android:layout_width="match_parent" android:layout_height="72dp">
                        <ImageView android:layout_gravity="center_vertical" android:layout_width="48dp" android:layout_height="48dp" android:src="@mipmap/about_logo" android:scaleType="centerCrop"/>
                        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:layout_gravity="center_vertical" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name"/>
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/about_version_view" android:background="?android:attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp">
                        <ImageView android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/ic_info"/>
                        <LinearLayout android:orientation="vertical" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginStart="32dp">
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_version_label"/>
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:id="@+id/app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=""/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/about_developers_view" android:background="?android:attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp">
                        <ImageView android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/ic_person"/>
                        <LinearLayout android:orientation="vertical" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginStart="32dp">
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_developers_label"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/about_show_help_view" android:background="?android:attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp">
                        <ImageView android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/ic_description"/>
                        <LinearLayout android:orientation="vertical" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginStart="32dp">
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_help"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/about_licenses_view" android:background="?android:attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/md_list_item_height">
                        <ImageView android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/ic_description"/>
                        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:text="@string/about_libraries_label" android:layout_marginStart="32dp"/>
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/about_source_code_view" android:background="?android:attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp">
                        <ImageView android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/ic_github"/>
                        <LinearLayout android:orientation="vertical" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginStart="32dp">
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_source_label"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/about_donate_view" android:background="?android:attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp">
                        <ImageView android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/ic_donate"/>
                        <LinearLayout android:orientation="vertical" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginStart="32dp">
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/support_donate_label"/>
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/support_donate_description"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" app:cardBackgroundColor="@color/list_download_item_color_dark" app:cardUseCompatPadding="true">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp">
                    <LinearLayout android:orientation="horizontal" android:padding="16dp" android:layout_width="match_parent" android:layout_height="72dp">
                        <ImageView android:layout_gravity="center_vertical" android:layout_width="48dp" android:layout_height="48dp" android:src="@mipmap/ic_danger" android:scaleType="centerCrop"/>
                        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:layout_gravity="center_vertical" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dangerous_zone"/>
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/about_reset_app_view" android:background="?android:attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp">
                        <ImageView android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/ic_info"/>
                        <LinearLayout android:orientation="vertical" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginStart="32dp">
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_reset_label"/>
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_reset_label_desc"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
